# agimode

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
config/: settings.json
config/hooks/: _common.py  _session.py  agimode-hooks.json  agimode-session-surface.py  agimode_fleet.py  codex-background-enforcer.py  fable-delegation-advisor.py  fable-subagent-model-guard.py  run-python-hook.sh  worktree_manager.py
config/hooks/tests/: conftest.py  test_agimode_fleet.py  test_agimode_plugin_hooks_contract.py  test_agimode_settings_contract.py  test_agimode_state.py  test_fable_delegation_advisor.py  test_fable_subagent_model_guard.py
config/references/: ruff-strict.toml
config/rules/: toolkit-agimode.md
config/skills/agimode/: SKILL.md
config/skills/agimode/scripts/: agimode_fleet_proof.py  run-agimode-claude.sh  run-agimode-codex.sh
